building CI of p1

--- a/p8105_hw6_zj2357.md
+++ b/p8105_hw6_zj2357.md
@@ -1,12 +1,11 @@
----
-title: "p8105_hw6_zj2357"
-author: "Zekai Jin (zj2357)"
-date: "2022-11-29"
-output: github_document
----
+p8105_hw6_zj2357
+================
+Zekai Jin (zj2357)
+2022-11-29
 
 First of all, we should include the libraries we are using.
-```{r init, message=FALSE}
+
+``` r
 library(tidyverse)
 library(p8105.datasets)
 
@@ -20,8 +19,10 @@ knitr::opts_chunk$set(
 ```
 
 # Problem 1
+
 Downloading the dataset
-```{r}
+
+``` r
 weather_df = 
   rnoaa::meteo_pull_monitors(
     c("USW00094728"),
@@ -35,7 +36,7 @@ weather_df =
   select(name, id, everything())
 ```
 
-```{r}
+``` r
 boot_straps = 
   tibble(
     strap_num = 1:100,
@@ -65,10 +66,8 @@ conf_int =
 conf_int
 ```
 
-
-
-
-
-
-
-
+    ## # A tibble: 2 × 3
+    ##   variable lower_CI higher_CI
+    ##   <chr>       <dbl>     <dbl>
+    ## 1 beta_sq     7.15      7.81 
+    ## 2 rsq         0.896     0.927
