--- a/p8105_hw6_zj2357.md
+++ b/p8105_hw6_zj2357.md
@@ -8,6 +8,7 @@ First of all, we should include the libraries we are using.
 ``` r
 library(tidyverse)
 library(p8105.datasets)
+library(patchwork)
 
 knitr::opts_chunk$set(
   message  = FALSE,
@@ -48,8 +49,36 @@ boot_straps =
     rsq =  map(.x=models,~pull(broom::glance(.x),r.squared)),
     beta_sq = map(beta,prod)
   ) %>%
-  select(strap_num,rsq,beta_sq)
+  select(strap_num,rsq,beta_sq) %>%
+  mutate(
+      rsq = as.numeric(rsq),
+      beta_sq = as.numeric(beta_sq)
+  )
+```
 
+plotting
+
+``` r
+rsq_plot = 
+  boot_straps %>%
+  ggplot(aes(x=rsq)) +
+  geom_density() +
+  xlab("x square")
+
+beta_plot = 
+  boot_straps %>%
+  ggplot(aes(x=beta_sq)) +
+  geom_density() +
+  xlab("beta_0 times beta_1 ")
+
+beta_plot + rsq_plot
+```
+
+<img src="p8105_hw6_zj2357_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
+
+CI
+
+``` r
 conf_int =
   boot_straps %>%
   pivot_longer(
@@ -57,7 +86,6 @@ conf_int =
     names_to = "variable",
     values_to = "value"
   ) %>%
-  mutate(value = as.numeric(value)) %>%
   group_by(variable) %>%
   summarise(
     lower_CI = quantile(value,0.025),
@@ -69,5 +97,103 @@ conf_int
     ## # A tibble: 2 × 3
     ##   variable lower_CI higher_CI
     ##   <chr>       <dbl>     <dbl>
-    ## 1 beta_sq     7.15      7.81 
-    ## 2 rsq         0.896     0.927
+    ## 1 beta_sq     7.11      7.75 
+    ## 2 rsq         0.895     0.930
+
+# Problem 2
+
+``` r
+rm(list = ls())
+
+homi_df = 
+  read_csv("data/homicide-data.csv") %>%
+  mutate(
+    city_state = str_c(city, ", ", state),
+    solved = !disposition %in% c("Closed without arrest","Open/No arrest"),
+    victim_age = as.numeric(victim_age)
+  ) %>%
+  filter(
+    !city_state %in% c("Dallas, TX", "Phoenix, AZ", "Kansas City, MO", "Tulsa, AL"),
+    victim_race %in% c("Black", "White")
+  ) %>%
+  select(uid,city_state,solved,victim_race, victim_age, victim_sex) %>%
+  na.omit()
+```
+
+`Baltimore, MD`
+
+``` r
+logi_fit = 
+  homi_df %>%
+  filter(city_state == "Baltimore, MD") %>%
+  glm(solved~ victim_race+ victim_age+ victim_sex, data = ., family = "binomial")
+
+logi_fit %>%
+  broom::tidy() %>%
+  filter(term == "victim_sexMale") %>%
+  mutate(
+    conf_low = estimate-1.96*std.error,
+    conf_high = estimate+1.96*std.error
+  )  %>%
+  select(term,estimate,conf_low,conf_high)
+```
+
+    ## # A tibble: 1 × 4
+    ##   term           estimate conf_low conf_high
+    ##   <chr>             <dbl>    <dbl>     <dbl>
+    ## 1 victim_sexMale   -0.854    -1.13    -0.584
+
+other cities
+
+``` r
+logi_fit =
+  homi_df %>%
+  nest(data = c(uid,solved, victim_age,victim_race,victim_sex)) %>%
+  mutate(
+    model = map(.x = data, ~glm(solved~ victim_race+ victim_age+ victim_sex, data = .x, family = "binomial")),
+    estimate = map(.x=model, ~filter(broom::tidy(.x),term == "victim_sexMale"))
+  ) %>%
+  unnest(estimate) %>%
+  mutate(
+    conf_low = estimate-1.96*std.error,
+    conf_high = estimate+1.96*std.error
+  )  %>%
+  select(city_state,estimate,conf_low,conf_high)
+
+logi_fit
+```
+
+    ## # A tibble: 47 × 4
+    ##    city_state        estimate conf_low conf_high
+    ##    <chr>                <dbl>    <dbl>     <dbl>
+    ##  1 Albuquerque, NM  0.570       -0.186    1.32  
+    ##  2 Atlanta, GA      0.0000771   -0.380    0.381 
+    ##  3 Baltimore, MD   -0.854       -1.13    -0.584 
+    ##  4 Baton Rouge, LA -0.964       -1.56    -0.363 
+    ##  5 Birmingham, AL  -0.139       -0.555    0.276 
+    ##  6 Boston, MA      -0.395       -1.03     0.244 
+    ##  7 Buffalo, NY     -0.653       -1.24    -0.0670
+    ##  8 Charlotte, NC   -0.123       -0.585    0.338 
+    ##  9 Chicago, IL     -0.891       -1.09    -0.692 
+    ## 10 Cincinnati, OH  -0.917       -1.44    -0.390 
+    ## # … with 37 more rows
+
+plotting
+
+``` r
+logi_fit %>%
+  mutate(
+    city_state = fct_reorder(city_state, -estimate)
+  ) %>%
+  ggplot(aes(x = estimate, y = city_state)) +
+  geom_point() +
+  geom_errorbar(aes(xmin = conf_low, xmax = conf_high)) +
+  labs(title = "Odds ratio of solved cases between male and female victims")
+```
+
+<img src="p8105_hw6_zj2357_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+
+Thus, in most cities, after adjusting for race and age, cases with male
+victims have more odds to be unsolved.
+
+# 
