--- a/p8105_hw6_zj2357.Rmd
+++ b/p8105_hw6_zj2357.Rmd
@@ -169,7 +169,27 @@ logi_fit %>%
 Thus, in most cities, after adjusting for race and age, cases with male victims have more odds to be unsolved.
 
 
-#
+# Problem 3
+
+```{r}
+rm(list = ls())
+
+racelist = c("white","black", "asian", "puerto rican", "other", "unknown")
+birth_df = 
+  read_csv("data/birthweight.csv") %>%
+  na.omit() %>%
+  mutate(
+    babysex = factor(babysex, levels = 1:2, labels = c("male","female")),
+    frace = factor(frace, levels = c(1,2,3,4,8,9),labels= c("white","black", "asian", "puerto rican", "other", "unknown")),
+    mrace = factor(mrace, levels = c(1,2,3,4,8),labels= c("white","black", "asian", "puerto rican", "other")),
+    malform = factor(malform, levels = 0:1,labels = c("absent","present"))
+  )  
+  
+
+
+
+
+```
 
 
 
