--- a/p8105_hw6_zj2357.Rmd
+++ b/p8105_hw6_zj2357.Rmd
@@ -11,6 +11,7 @@ library(tidyverse)
 library(p8105.datasets)
 library(patchwork)
 library(modelr)
+library(mgcv)
 
 knitr::opts_chunk$set(
   message  = FALSE,
@@ -196,7 +197,8 @@ building my model
 ```{r}
 my_model = step(lm(bwt ~ ., data = birth_df),direction = "both")
 
-formula(my_model)
+my_formula=formula(my_model)
+my_formula
 ```
 
 plotting
@@ -218,7 +220,28 @@ model_2 = lm(bwt ~ (bhead+ blength +babysex)^3,data = birth_df)
 
 
 
+cross validation
+```{r}
+cv_df = 
+  crossv_kfold(birth_df, k=10) %>%
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble)
+  ) %>%
+  mutate(
+    my_mod = map(train, ~lm(my_formula,data = .x)),
+    mod_1 = map(train, ~lm(bwt ~ blength+ gaweeks,data = .x)),
+    mod_2 = map(train, ~lm(bwt ~ (bhead+ blength +babysex)^3,data = .x))
+  ) %>%
+  mutate(
+    my_rmse = map2_dbl(my_mod, test, ~rmse(model=.x,data=.y)),
+    rmse_1 = map2_dbl(mod_1, test, ~rmse(model=.x,data=.y)),
+    rmse_2 = map2_dbl(mod_2, test, ~rmse(model=.x,data=.y)),
+  )
 
+
+
+```
 
 
 
