--- a/p8105_hw6_zj2357.md
+++ b/p8105_hw6_zj2357.md
@@ -39,52 +39,57 @@ weather_df =
   select(name, id, everything())
 ```
 
+Bootstrap the 5000 samples and calculate the $\hat{r}^2$,
+$log(\beta_0\times\beta_1)$
+
 ``` r
 boot_straps = 
   tibble(
-    strap_num = 1:100,
-    strap_samp = rerun(100, sample_frac(weather_df, replace = TRUE))
+    strap_num = 1:5000,
+    strap_samp = rerun(5000, sample_frac(weather_df, replace = TRUE))
   ) %>%
   mutate(
-    models = map(.x=strap_samp, ~lm(tmax~tmin, data = .x)),
-    beta = map(.x=models,~pull(broom::tidy(.x),estimate)),
-    rsq =  map(.x=models,~pull(broom::glance(.x),r.squared)),
-    beta_sq = map(beta,prod)
+    models = map(.x = strap_samp, ~lm(tmax ~ tmin, data = .x)),
+    beta = map(.x = models, ~pull(broom::tidy(.x), estimate)),
+    rsq =  map(.x = models, ~pull(broom::glance(.x), r.squared)),
+    beta_mult = map(beta, prod)
   ) %>%
-  select(strap_num,rsq,beta_sq) %>%
   mutate(
       rsq = as.numeric(rsq),
-      beta_sq = as.numeric(beta_sq)
-  )
+      beta_log = log(as.numeric(beta_mult))
+  ) %>%
+  select(strap_num,rsq,beta_log) 
 ```
 
-plotting
+plot the distribution of $\hat{r}^2$ and $log(\beta_0\times\beta_1)$.
 
 ``` r
 rsq_plot = 
   boot_straps %>%
-  ggplot(aes(x=rsq)) +
+  ggplot(aes(x = rsq)) +
   geom_density() +
-  xlab("x square")
+  xlab("x square")+
+  labs(title = "distribution of r_squred and log beta")
 
 beta_plot = 
   boot_straps %>%
-  ggplot(aes(x=beta_sq)) +
+  ggplot(aes(x = beta_log)) +
   geom_density() +
   xlab("beta_0 times beta_1 ")
 
-beta_plot + rsq_plot
+beta_plot + rsq_plot 
 ```
 
 <img src="p8105_hw6_zj2357_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
 
-CI
+The following code calculates the Confidence Interval (CI) for the two
+values based on normal distribution.
 
 ``` r
 conf_int =
   boot_straps %>%
   pivot_longer(
-    rsq:beta_sq,
+    rsq:beta_log,
     names_to = "variable",
     values_to = "value"
   ) %>%
@@ -93,16 +98,19 @@ conf_int =
     lower_CI = quantile(value,0.025),
     higher_CI = quantile(value,0.975)
   )
+
 conf_int
 ```
 
     ## # A tibble: 2 × 3
     ##   variable lower_CI higher_CI
     ##   <chr>       <dbl>     <dbl>
-    ## 1 beta_sq     7.18      7.82 
-    ## 2 rsq         0.894     0.929
+    ## 1 beta_log    1.97      2.06 
+    ## 2 rsq         0.894     0.927
 
 # Problem 2
+
+Download and clean the homicide dataset.
 
 ``` r
 rm(list = ls())
@@ -122,72 +130,74 @@ homi_df =
   na.omit()
 ```
 
-`Baltimore, MD`
+Do the logistic regression on `Baltimore, MD`.
 
 ``` r
 logi_fit = 
   homi_df %>%
   filter(city_state == "Baltimore, MD") %>%
-  glm(solved~ victim_race+ victim_age+ victim_sex, data = ., family = "binomial")
+  glm(solved~ victim_race + victim_age + victim_sex, data = ., family = "binomial")
 
 logi_fit %>%
   broom::tidy() %>%
   filter(term == "victim_sexMale") %>%
   mutate(
-    conf_low = estimate-1.96*std.error,
-    conf_high = estimate+1.96*std.error
+    odds_ratio = exp(estimate),
+    conf_low = exp(estimate  - 1.96 * std.error),
+    conf_high = exp(estimate + 1.96 * std.error)
   )  %>%
-  select(term,estimate,conf_low,conf_high)
+  select(term, odds_ratio, conf_low, conf_high)
 ```
 
     ## # A tibble: 1 × 4
-    ##   term           estimate conf_low conf_high
-    ##   <chr>             <dbl>    <dbl>     <dbl>
-    ## 1 victim_sexMale   -0.854    -1.13    -0.584
+    ##   term           odds_ratio conf_low conf_high
+    ##   <chr>               <dbl>    <dbl>     <dbl>
+    ## 1 victim_sexMale      0.426    0.325     0.558
 
-other cities
+Iterate over other cities with logistic regression.
 
 ``` r
 logi_fit =
   homi_df %>%
-  nest(data = c(uid,solved, victim_age,victim_race,victim_sex)) %>%
+  nest(data = c(uid, solved, victim_age, victim_race, victim_sex)) %>%
   mutate(
-    model = map(.x = data, ~glm(solved~ victim_race+ victim_age+ victim_sex, data = .x, family = "binomial")),
-    estimate = map(.x=model, ~filter(broom::tidy(.x),term == "victim_sexMale"))
+    model = map(.x = data, ~glm(solved ~ victim_race + victim_age + victim_sex, data = .x, family = "binomial")),
+    estimate = map(.x  = model, ~filter(broom::tidy(.x), term == "victim_sexMale"))
   ) %>%
   unnest(estimate) %>%
   mutate(
-    conf_low = estimate-1.96*std.error,
-    conf_high = estimate+1.96*std.error
+    odds_ratio = exp(estimate),
+    conf_low = exp(estimate  - 1.96 * std.error),
+    conf_high = exp(estimate + 1.96 * std.error)
   )  %>%
-  select(city_state,estimate,conf_low,conf_high)
+  select(city_state, odds_ratio, conf_low, conf_high)
 
 logi_fit
 ```
 
     ## # A tibble: 47 × 4
-    ##    city_state        estimate conf_low conf_high
+    ##    city_state      odds_ratio conf_low conf_high
     ##    <chr>                <dbl>    <dbl>     <dbl>
-    ##  1 Albuquerque, NM  0.570       -0.186    1.32  
-    ##  2 Atlanta, GA      0.0000771   -0.380    0.381 
-    ##  3 Baltimore, MD   -0.854       -1.13    -0.584 
-    ##  4 Baton Rouge, LA -0.964       -1.56    -0.363 
-    ##  5 Birmingham, AL  -0.139       -0.555    0.276 
-    ##  6 Boston, MA      -0.395       -1.03     0.244 
-    ##  7 Buffalo, NY     -0.653       -1.24    -0.0670
-    ##  8 Charlotte, NC   -0.123       -0.585    0.338 
-    ##  9 Chicago, IL     -0.891       -1.09    -0.692 
-    ## 10 Cincinnati, OH  -0.917       -1.44    -0.390 
+    ##  1 Albuquerque, NM      1.77     0.831     3.76 
+    ##  2 Atlanta, GA          1.00     0.684     1.46 
+    ##  3 Baltimore, MD        0.426    0.325     0.558
+    ##  4 Baton Rouge, LA      0.381    0.209     0.695
+    ##  5 Birmingham, AL       0.870    0.574     1.32 
+    ##  6 Boston, MA           0.674    0.356     1.28 
+    ##  7 Buffalo, NY          0.521    0.290     0.935
+    ##  8 Charlotte, NC        0.884    0.557     1.40 
+    ##  9 Chicago, IL          0.410    0.336     0.501
+    ## 10 Cincinnati, OH       0.400    0.236     0.677
     ## # … with 37 more rows
 
-plotting
+Finally, plot the odds ratio between cities.
 
 ``` r
 logi_fit %>%
   mutate(
-    city_state = fct_reorder(city_state, -estimate)
+    city_state = fct_reorder(city_state, -odds_ratio)
   ) %>%
-  ggplot(aes(x = estimate, y = city_state)) +
+  ggplot(aes(x = odds_ratio, y = city_state)) +
   geom_point() +
   geom_errorbar(aes(xmin = conf_low, xmax = conf_high)) +
   labs(title = "Odds ratio of solved cases between male and female victims")
