--- a/p8105_hw6_zj2357.Rmd
+++ b/p8105_hw6_zj2357.Rmd
@@ -162,6 +162,7 @@ logi_fit %>%
   ) %>%
   ggplot(aes(x = odds_ratio, y = city_state)) +
   geom_point() +
+  geom_vline(aes(xintercept = 1), color = "red") +
   geom_errorbar(aes(xmin = conf_low, xmax = conf_high)) +
   labs(title = "Odds ratio of solved cases between male and female victims")
 ```
@@ -170,7 +171,7 @@ Thus, in most cities, after adjusting for race and age, cases with male victims 
 
 
 # Problem 3
-
+Read and tidy the data. Since there are no missing values nor known values, my main focus is to reformat some variables based on the description.
 ```{r}
 rm(list = ls())
 
@@ -180,67 +181,59 @@ birth_df =
   na.omit() %>%
   mutate(
     babysex = factor(babysex, levels = 1:2, labels = c("male","female")),
-    frace = factor(frace, levels = c(1,2,3,4,8,9),labels= c("white","black", "asian", "puerto rican", "other", "unknown")),
-    mrace = factor(mrace, levels = c(1,2,3,4,8),labels= c("white","black", "asian", "puerto rican", "other")),
+    frace = factor(frace, levels = c(1,2,3,4,8,9),labels = c("white","black", "asian", "puerto rican", "other", "unknown")),
+    mrace = factor(mrace, levels = c(1,2,3,4,8),labels = c("white","black", "asian", "puerto rican", "other")),
     malform = factor(malform, levels = 0:1,labels = c("absent","present"))
   ) %>%
   select(bwt, everything())
-  
-
 ```
 
-
-
-building my model
+I tried to build my model through step wise regression:
 ```{r}
-model_mine = step(lm(bwt ~ ., data = birth_df),direction = "both",trace = 0)
+model_mine = step(lm(bwt ~ ., data = birth_df), direction = "both", trace = 0)
 
-formula_mine=formula(model_mine)
+formula_mine = formula(model_mine)
 formula_mine
 ```
 
-plotting
+Above is the optimal model the step wise regression found. Among the `r ncol(birth_df)-1`, only 11 variables are selected. Save the formula for later use.
+
+As required, make a residue plot:
+
 ```{r}
 birth_df %>%
   add_predictions(model_mine) %>%
   add_residuals(model_mine) %>%
-  ggplot(aes(x=pred,y=resid)) +
+  ggplot(aes(x = pred, y = resid)) +
   geom_point() +
-  labs(title = "residule vs predicted outcomes")
+  labs(title = "residue vs predicted outcomes")
 ```
 
+We can see that the plot revealed some outliers and the variance across predicted values are not equal. That indicates our model may not be the best model.
 
-other models
-```{r}
-model_1 = lm(bwt ~ blength+ gaweeks,data = birth_df)
-model_2 = lm(bwt ~ (bhead+ blength +babysex)^3,data = birth_df)
-```
+To compare different models, use cross validation (CV). In this case, we choose 10-fold CV since the dataset is large enough. Calculate the rmse for each test on different models:
 
-
-
-
-cross validation
 ```{r}
 cv_df = 
-  crossv_kfold(birth_df, k=10) %>%
+  crossv_kfold(birth_df, k = 10) %>%
   mutate(
     train = map(train, as_tibble),
     test = map(test, as_tibble)
   ) %>%
   mutate(
-    mod_mine = map(train, ~lm(formula_mine,data = .x)),
-    mod_1 = map(train, ~lm(bwt ~ blength+ gaweeks,data = .x)),
-    mod_2 = map(train, ~lm(bwt ~ (bhead+ blength +babysex)^3,data = .x))
+    mod_mine = map(train, ~lm(formula_mine, data = .x)),
+    mod_1 = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+    mod_2 = map(train, ~lm(bwt ~ (bhead + blength + babysex)^3, data = .x))
   ) %>%
   mutate(
-    rmse_mine = map2_dbl(mod_mine, test, ~rmse(model=.x,data=.y)),
-    rmse_1 = map2_dbl(mod_1, test, ~rmse(model=.x,data=.y)),
-    rmse_2 = map2_dbl(mod_2, test, ~rmse(model=.x,data=.y)),
+    rmse_mine = map2_dbl(mod_mine, test, ~rmse(model = .x, data = .y)),
+    rmse_1 = map2_dbl(mod_1, test, ~rmse(model = .x, data = .y)),
+    rmse_2 = map2_dbl(mod_2, test, ~rmse(model = .x, data = .y)),
   )
 
 ```
 
-ploting
+Finally, make a plot to show the distribution of rmse of different models.
 
 ```{r}
 cv_df %>%
@@ -256,6 +249,6 @@ cv_df %>%
   labs(title = "distribution of rmse  under  different model")
 ```
 
-
+Obviously, our model have the lowest rmse among the three models. However, it is a little bit concerning that it uses more parameters than the other two. 
 
 
