changing from k-fold cv to 100 different samples due to unstability of the result

--- a/p8105_hw6_zj2357.md
+++ b/p8105_hw6_zj2357.md
@@ -264,12 +264,12 @@ predicted values are not equal. That indicates our model may not be the
 best model.
 
 To compare different models, use cross validation (CV). In this case, we
-choose 10-fold CV since the dataset is large enough. Calculate the rmse
-for each test on different models:
+choose 100 different train-test pairs to gurantee the stability of the
+result. Calculate the rmse for each test on different models:
 
 ``` r
 cv_df = 
-  crossv_kfold(birth_df, k = 10) %>%
+  crossv_mc(birth_df, n = 100) %>%
   mutate(
     train = map(train, as_tibble),
     test = map(test, as_tibble)
